c4prj1_deck/grade.txt
Grading at Sun Mar  7 18:44:46 UTC 2021
Compiling deck.c -> deck.o
deck.c: In function ‘add_empty_card’:
deck.c:21:8: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
 return deck->cards;
        ^
cc1: all warnings being treated as errors
Compilation of deck.c failed

Overall Grade: F
